# rgecko

./: Cargo.toml  justfile  makefile
.github/workflows/: build.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: extras.rs  lib.rs  logger.rs  main.rs
src/argparse/: parser.rs
src/colors/: ansicodes.rs  colorsheet.rs  mod.rs  terms.rs  transform.rs
