[package]
name = "rgecko"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "fuzz"]

[lib]
name = "rgecko"
path = "src/lib.rs"

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
dhat = "0.3.3"
log = "0.4.29"

[features]
fuzzing = ["arbitrary"]
dhat-heap = []

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.samply]
inherits = "release"
debug = true
opt-level = 3
strip = false
lto = true
codegen-units = 1
panic = "unwind"
